Fix Bugs in Home Tab Template - apply a word wrap to the contentBox style to deal with very long words like URLs. - fix situation where the server returns moderator:true in the profile but no moderator information. - Closes #396

--- a/styles/components/_containers.scss
+++ b/styles/components/_containers.scss
@@ -63,7 +63,7 @@
   padding: $pad;
   border-style: solid;
   border-width: 1px;
-  text-align: center;    
+  text-align: center;
 }
 
 .boxList > * {
@@ -167,6 +167,7 @@
   border-width: 1px;
   border-style: solid;
   font-size: $tx4;
+  word-wrap: break-word;
 }
 
 .phraseBox {
